refactored User routes and controllers to use adminAuthorization, removed password_hash from queries, deleted createUser
