# swagger.yaml
@@ -779,52 +779,6 @@ paths:
       deprecated: false
       security:
       - bearer: []
-    post:
-      tags:
-      - users
-      summary: POST USER
-      operationId: POSTUSER
-      parameters: []
-      requestBody:
-        description: ''
-        content:
-          application/json:
-            schema:
-              allOf:
-              - $ref: '#/components/schemas/POSTUSERREQUEST'
-              - example:
-                  f_name: gggg
-                  l_name: gggg
-                  email: ff@ff.ff
-                  password: gggg
-                  house_number: 5a
-                  street_name: Big street
-                  city: London
-                  country: France
-                  is_admin: true
-                  is_contributor: true
-            example:
-              f_name: gggg
-              l_name: gggg
-              email: ff@ff.ff
-              password: gggg
-              house_number: 5a
-              street_name: Big street
-              city: London
-              country: France
-              is_admin: true
-              is_contributor: true
-        required: true
-      responses:
-        '200':
-          description: successful operation
-        '401':
-          description: unauthorized
-        '400':
-          description: bad request
-      deprecated: false
-      security:
-      - bearer: []
   /users/{userId}:
     get:
       tags:
